feat: add sidebar
use ReactDom.createPortal(React v16)

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-plugin-google-analytics": "^1.0.19",
     "gatsby-plugin-offline": "^1.0.14",
     "gatsby-plugin-react-helmet": "^1.0.8",
+    "gatsby-plugin-react-next": "^1.0.10",
     "gatsby-plugin-sass": "^1.0.17",
     "gatsby-plugin-sharp": "^1.6.30",
     "gatsby-plugin-typescript": "^1.4.16",
@@ -50,6 +51,8 @@
     "typeface-montserrat": "^0.0.54"
   },
   "devDependencies": {
+    "@types/react-dom": "^16.0.4",
+    "@types/react-helmet": "^5.0.4",
     "gh-pages": "^1.1.0",
     "prettier": "^1.10.2"
   }
