--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "trailingComma": "es5",
   "semi": false,
   "tabWidth": 2,
-  "singleQuote": true
+  "singleQuote": true,
+  "printWidth": 200
 }
