--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gatsby-plugin-sharp": "^1.6.30",
     "gatsby-plugin-typescript": "^1.4.16",
     "gatsby-plugin-typography": "^1.7.14",
+    "gatsby-remark-autolink-headers": "^1.4.13",
     "gatsby-remark-copy-linked-files": "^1.5.27",
     "gatsby-remark-images": "^1.5.46",
     "gatsby-remark-prismjs": "^1.2.15",
