--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-starter-blog",
   "description": "Starter Gatsby Blog",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "linzebin <linzebin@qq.com>",
   "bugs": {
     "url": "https://github.com/linzebin/blog/issues"
   },
